--- a/app/views/chat/show.html.erb
+++ b/app/views/chat/show.html.erb
@@ -96,14 +96,21 @@
       </div>
       
       <!-- Others Profile -->
+      <div class="row" id="chat_top">
+        <div class="col-sm-12">
+          <h5 style="color: #52D5CC">Members</h3>
+        </div>
+      </div>
   		<% temp.each_with_index do |t,idx| %>
   		  <% if t.id != current_user.id %>
-    	  	<div id="profile<%=idx%>" class="col-sm-12">
-    	  		<aside style="padding-left: 12px;">
-    		    	<img id="img_setting" class="img-circle" alt="profile" src="<%=t.image%>">
-    	    	</aside>
-    		    	<h5 style="color: white;"><%=t.first_name%></h5>
-    	  	</div>
+  		    <div class="row" id="chat_top">
+            <div id="profile<%=idx%>" class="col-sm-12">
+      	  		<aside style="padding-left: 12px;">
+      		    	<img id="img_setting" class="img-circle" alt="profile" src="<%=t.image%>">
+      	    	</aside>
+    		    	<h5 style="color: black;"><%=t.first_name%></h5>
+      	  	</div>
+          </div>
 		  	<% end %>
   		<% end %>
       
