--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -159,8 +159,8 @@
         <% end %>
         <a class="nav navbar-text navbar-left" href="https://open.kakao.com/o/sbpof8i">그루퍼에 의견 보내기!</a>
         <ul class="nav navbar-nav navbar-right">
-          <a class="navbar-brand" href="#">
-            <img class="img-rounded" alt="profile" src="<%= current_user.image.url %>" width="20px" height="20px">
+          <a class="navbar-brand" href="/team/profile">
+            <img class="img-circle" alt="profile" src="<%= current_user.image.url %>" width="20px" height="20px">
           </a>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=current_user.first_name %> <span class="caret"></span></a>
@@ -205,7 +205,7 @@ function notifyMe() {
     Notification.requestPermission();
   else {
     var notification = new Notification('그루퍼에서 알림이??!!', {
-      icon: 'Picture.png',
+      icon: '/Picture1.png',
       body: "누가 메세지를 보냈어요!",
     });
 
