--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -101,8 +101,8 @@
   $(document).ready(function(){
     <%if @message %>
 
-      $('#chatbox').animate({ scrollTop: $('#message<%=@message.id%>').offset().top });
-      $("#message<%=@message.id%>").append("<p>--------여기까지 읽으셨습니다------------</p>")
+      $('#chatbox').animate({ scrollTop: $('#message<%=@message.id%>').offset().top-200 });
+      $("#message<%=@message.id%>").append("-----------여기까지 읽었습니다-----------");
     <% end %>
   });
 
@@ -119,5 +119,9 @@ function bigImg(x) {
 function normalImg(x) {
     x.style.height = "36px";
     x.style.width = "36px";
+}
+
+function search(x) {
+    $('#chatbox').animate({ scrollTop: $("#message"+x).offset().top-200 });
 }
 </script>
