--- a/app/views/team/profile.html.erb
+++ b/app/views/team/profile.html.erb
@@ -16,7 +16,7 @@ background-size: cover;
           <form id="profileupload" class="form-inline" action="/team/profileupdate" method="post" enctype="multipart/form-data">
             <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
             <input id="imageupload" type="file" name="image" style="visibility:hidden;position:absolute;top:0;left:0;">
-            <label for="imageupload" style="cursor: pointer;"><img class="img-rounded" src="<%= current_user.image.url %>" alt="<%=current_user.first_name%>" onmouseover="editImg(this)" onmouseout="normalImg(this)" width="100px" height="100px"></label>
+            <label for="imageupload" style="cursor: pointer;"><img class="img-circle" src="<%= current_user.image.url %>" alt="<%=current_user.first_name%>" onmouseover="editImg(this)" onmouseout="normalImg(this)" width="100px" height="100px"></label>
           </form>
           <a data-toggle="collapse" href="#name" aria-expanded="false" aria-controls="name" style="text-decoration: none;">
             <h3><%=current_user.first_name%></h3>
