--- a/app/views/message/show.html.erb
+++ b/app/views/message/show.html.erb
@@ -437,12 +437,12 @@
         </div>
       </div>
     </div>
-    <% if @chat.messages.count != 0 %>
+    <% if @chat.messages.count != 0 and @message%>
       <form action="/message/updateall" method="put" data-remote=true id="messagelookall">
         <input id="checkmessage" type="hidden" name="message_id" value=<%=@chat.messages.last.id%>>
         <input type="hidden" name="chat_id" value=<%=@chat.id%>>
-        <input id="checkpoint" type="hidden" name="isupdate" value="false">
         <input type="hidden" name="lastread" value="<%=@message.id%>">
+	<input id="checkpoint" type="hidden" name="isupdate" value="false">
       </form>
     <% end %>
 
